--- a/app/src/main/res/layout/activity_simple_photo_web_server.xml
+++ b/app/src/main/res/layout/activity_simple_photo_web_server.xml
@@ -6,32 +6,53 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SimplePhotoWebServerActivity">
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_button_label"
-        android:id="@+id/startButton"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onStartButtonClicked" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/stop_button_label"
-        android:id="@+id/stopButton"
-        android:layout_alignTop="@+id/startButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="onStopButtonClicked" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/status_text_default_label"
+        android:id="@+id/statusText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Status..."
-        android:id="@+id/statusText"
-        android:layout_above="@+id/startButton"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/url_text_default_label"
+        android:id="@+id/urlText"
+        android:layout_below="@+id/statusText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/urlText"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_button_label"
+            android:id="@+id/startButton"
+            android:onClick="onStartButtonClicked"
+            android:layout_alignTop="@+id/stopButton"
+            android:layout_toLeftOf="@+id/urlText"
+            android:layout_toStartOf="@+id/urlText" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stop_button_label"
+            android:id="@+id/stopButton"
+            android:onClick="onStopButtonClicked"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/urlText"
+            android:layout_toEndOf="@+id/urlText" />
+    </LinearLayout>
 </RelativeLayout>
