--- a/app/src/main/res/values/html_fragments.xml
+++ b/app/src/main/res/values/html_fragments.xml
@@ -28,9 +28,9 @@
             a {color: black; }\n
             a:visited {color: black; }\n
             .image-thumbnail {width: 40px; }\n
+            .image-thumbnail-selected {border: 3px solid grey; }\n
             .image-main-regular {height: 300px; }\n
-            .thumbnail-cell-regular {border: 1px dotted grey; margin: 0px; padding: 0px; }\n
-            .thumbnail-cell-selected {border: 3px solid grey; margin: 0px; padding: 0px; }\n
+            .thumbnail-cell-regular {margin: 0px; padding: 0px; vertical-align: top; }\n
         ]]>
     </string>
     <string name="title_regular">Simple Photo Web Server</string>
