--- a/app/src/main/res/layout/activity_simple_photo_web_server.xml
+++ b/app/src/main/res/layout/activity_simple_photo_web_server.xml
@@ -6,15 +6,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SimplePhotoWebServerActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logoView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/gui_logo" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/status_text_default_label"
         android:id="@+id/statusText"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/logoView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp" />
+        android:layout_marginTop="1dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,4 +64,5 @@
             android:layout_toRightOf="@+id/urlText"
             android:layout_toEndOf="@+id/urlText" />
     </LinearLayout>
+
 </RelativeLayout>
