--- a/app/src/main/res/values/html_fragments.xml
+++ b/app/src/main/res/values/html_fragments.xml
@@ -5,18 +5,21 @@
             body { font-family:Arial, sans-serif; background: black; color: white; }\n
             table { margin: 0px; border-collapse: collapse; }\n
             td, th { padding: .3em; border: 0px #ccc solid; vertical-align: center; }\n
-            h3 { text-align: center; }\n
-            .h3-about { text-align: left; }\n
+            h3-main { display: block; font-size: 150%; }\n
+            h3-about { display: block; font-size: 150%; text-align: left; margin-top: 20px; }\n
             .main-container {margin: 10px 10px 10px 10px; padding: 20px; }\n
             .position-center {position: absolute; left: 25%; }\n
             .about-link {font-size: 50%; }\n
             a {color: white; }\n
             a:visited {color: white; }\n
             .image-thumbnail {width: 40px; }\n
-            .image-thumbnail-selected {border: 3px solid grey; }\n
+            .image-thumbnail-selected {border: 2px solid grey; background: grey; }\n
             .image-main-regular {height: 300px; }\n
             .thumbnail-cell-regular {margin: 0px; padding: 0px; vertical-align: top; }\n
             .image-download-icon {display: block; float: right; }\n
+            // These style are here to ensure the size of the thumbnail table is fixed, for a more stable view. \n
+            .thumbnail-table-div {height: 100px; overflow: hidden; }\n
+            .thumbnail-cell-div {max-height: 40px; overflow: hidden; }\n
         ]]>
     </string>
     <string name="html_main_template">
@@ -29,7 +32,7 @@
                 </head>\n
                 <body>\n
                     <div class=\'main-container position-center\'>\n
-                        <h3><a href=\'/\'><img src=\'/showIcon?path=logo\'/></a>||title||</h3>\n
+                        <h3-main><a href=\'/\'><img src=\'/showIcon?path=logo\'/></a>||title||</h3-main>\n
                         ||content||
                         <div class=\'about-link\'>\n
                             <a href=\'/about\'>[About]</a>
@@ -50,11 +53,11 @@
                 <body>\n
                     <div class=\'main-container\'>\n
                         <a href=\'/\'><img src=\'/showIcon?path=logo\'/></a>\n
-                        <h3 class=\'h3-about\'>About</h3>\n
+                        <h3-about>About</h3-about>\n
                         This is a simple web server to show photos stored on an Android device in a web browser.
-                        <h3 class=\'h3-about\'>Questions comments concerns?</h3>
+                        <h3-about>Questions comments concerns?</h3-about>
                         You can contact me at sander@sanderbos.com.
-                        <h3 class=\'h3-about\'>Third party licenses</h3>
+                        <h3-about>Third party licenses</h3-about>
                         This software uses NanoHTTPD, which has the following license:
                         <pre>
 NanoHTTPD Copyright ( c ) 2012-2013 by Paul S. Hawke, 2001,2005-2013 by Jarno Elonen, 2010 by Konstantinos Togias. All rights reserved.\n
