--- a/app/src/main/res/values/html_fragments.xml
+++ b/app/src/main/res/values/html_fragments.xml
@@ -9,6 +9,7 @@
             h3-about { display: block; font-size: 150%; text-align: left; margin-top: 20px; }\n
             .main-container {margin: 10px 10px 10px 10px; padding: 20px; }\n
             .position-center {position: absolute; left: 25%; }\n
+            .position-block-center {margin-left: auto; margin-right: auto; }\n
             .about-link {font-size: 50%; }\n
             a {color: white; }\n
             a:visited {color: white; }\n
