--- a/app/src/main/res/values/html_fragments.xml
+++ b/app/src/main/res/values/html_fragments.xml
@@ -16,8 +16,10 @@
             .image-thumbnail {width: 40px; }\n
             .image-thumbnail-selected {border: 2px solid grey; background: grey; }\n
             .image-main-regular {height: 50vh; }\n
+            .image-main-fullscreen {width: 85vw; }\n
             .thumbnail-cell-regular {margin: 0px; padding: 0px; vertical-align: top; }\n
             .image-download-icon {display: block; float: right; }\n
+            .image-fullscreen-icon {display: block; float: right; padding-left: 4px; }\n
             // These style are here to ensure the size of the thumbnail table is fixed, for a more stable view. \n
             .thumbnail-table-div {height: 100px; overflow: hidden; }\n
             .thumbnail-cell-div {max-height: 40px; overflow: hidden; }\n
@@ -40,6 +42,22 @@
                         <div class=\'about-link\'>\n
                             <a href=\'/about\'>[About]</a>
                         </div>\n
+                    \n</div>\n
+                </body>\n
+            </html>\n
+        ]]>
+    </string>
+    <string name="html_fullscreen_template">
+        <![CDATA[
+            <!doctype html>\n
+            <html>\n
+                <head>\n
+                    <title>||title||</title>\n
+                    <link rel=\'stylesheet\' href=\'/default_style.css\' type=\'text/css\'></link>\n
+                </head>\n
+                <body>\n
+                    <div>\n
+                        ||content||
                     \n</div>\n
                 </body>\n
             </html>\n
